--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,7 +32,7 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .cards > .card {
   border: 1px solid lightgray;
@@ -244,9 +244,9 @@ body {
 }
 .header {
   width: 100%;
-  height: 75px;
-  background: #17141d87;
-  backdrop-filter: blur(10px);
+  height: 50px;
+  background: #17141d58;
+  backdrop-filter: blur(20px);
   opacity: 0.95;
   overflow: hidden;
   -webkit-box-shadow: #333 1px 3px 4px;
