--- a/public/css/singupstyle.css
+++ b/public/css/singupstyle.css
@@ -218,7 +218,7 @@ h2 {
 }
 .header {
   width: 100%;
-  height: 75px;
+  height: 50px;
   background: #17141d87;
   backdrop-filter: blur(10px);
   opacity: 0.95;
@@ -293,7 +293,7 @@ polygon {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.411);
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(60%);
   padding: 2%;
   border: solid;
   border-radius: 10px;
