--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <div class="header">
-        <div class="logo"><img src="/public/images/Logo.png" height="100px" width="100px"></div>
+        <div class="logo"><img src="/public/images/Logo.png" height="80px" width="80px"></div>
         <div class="menu">
             <svg class="line-top" width="750" height="0px" viewbox="0,0 1000,20">
                 <line class="line-dash" x1="0" y1="15" x2="1000" y2="15"
@@ -28,15 +28,15 @@
                 <li><a href="/login" style="text-decoration: none; color: #ffffff;">Log in</a></li>
             </ul>
             <br>
-            <svg class="line-bottom" width="750" height="30" viewbox="0,0 1000,40">
+            <!-- <svg class="line-bottom" width="750" height="30" viewbox="0,0 1000,40">
                 <polygon class="lb" points="35,53 115,53 125,43 135,53 215,53" />
                 <polygon class="lb" points="285,53 365,53 375,43 385,53 465,53" />
                 <polygon class="lb" points="535,53 615,53 625,43 635,53 715,53" />
                 <polygon class="lb" points="785,53 865,53 875,43 885,53 965,53" />
-            </svg>
+            </svg> -->
         </div>
-    </div><br><br><br><br><br>
-    <div class="container">
+    </div>
+    <div class="container" style="overflow: hidden; width: 100%;">
         <div class="slider">
             <div class="box1">
             </div>
@@ -54,33 +54,13 @@
             </div>
         </div>
     </div>
-    <div id="test"></div>
-    <div class="blank">
-        <section class="banner">
-            <div class="banner-text-item">
-                <form class="form">
-                    <input type="text" list="mylist" placeholder="Where would you like to go?">
-                    <datalist id="mylist">
-                        <option>Odisha</option>
-                        <option>Delhi</option>
-                        <option>Maharastra</option>
-                        <option>Bihar</option>
-                        <option>Jharkhand</option>
-                        <option>West Bengal</option>
-                        <option>Karnataka</option>
-                    </datalist>
-
-                </form>
-            </div>
-        </section>
-    </div>
-    <div>
-        <section class="places">
-            <div class="places-text">
-                <h2>Search Results</h2>
-            </div>
-            <div class="cards">
-                <% for( let i=0; i < data.length; i++ ) { %>
+    <section class="places">
+        <div class="places-text">
+            <h2>Search Results</h2>
+        </div>
+        <div class="cards">
+            <% for (let i=0; i < data.length; i++) { %>
+                <% const item=data[i]; %>
                     <div class="card">
                         <div class="zoom-img">
                             <div class="img-card">
@@ -89,34 +69,28 @@
                         </div>
                         <hr>
                         <div class="text" style="font-size: 20px;">
-
                             <div><strong><span class="rating" style="color: red;">
-                                        <%= data[i].name %>
+                                        <%= item.name %>
                                     </span></strong></div>
-
                             <br><br><br>
                             <span class="rating">⭐⭐⭐⭐⭐</span>
-
-
-                            <h2> </h2>
-                            <%= data[i].state; %>
+                            <h2></h2>
+                            <%= item.state %>
                                 <h3>Des:-</h3>&nbsp;<h5><span id="des">
-                                        <%= data[i].des %>
+                                        <%= item.des %>
                                     </span></h5>
-                                <p class="cost">₹<%= data[i].price %>/person</p>
+                                <p class="cost">₹<%= item.price %>/person</p>
                                 <div class="card-box">
-                                    <p class="time">As per your requirment</p>
-                                    <p class="location">Contact +91-&nbsp;<%= data[i].no; %>
+                                    <p class="time">As per your requirement</p>
+                                    <p class="location">Contact +91-<%= item.no %>
                                     </p>
                                 </div>
-
-
                         </div>
-
                     </div>
                     <% } %>
-            </div>
-        </section>
+        </div>
+
+    </section>
     </div>
 
     <br><br><br>
@@ -251,7 +225,8 @@
                         <h3>Swachh Bharat Mission</h3>
                         <form action="/sbm" method="post">
                             <div class="card-bottom">
-                                <input class="email" name="location" placeholder="Enter the location : " size="50" required>
+                                <input class="email" name="location" placeholder="Enter the location : " size="50"
+                                    required>
                                 <div class="card-bottom">
                                     <input type="" class="email" name="complaint" placeholder="Enter the complaint : "
                                         size="50" required>
@@ -271,7 +246,8 @@
                         <h3>Compliant about the guide : </h3>
                         <form action="/tcomplain" method="post">
                             <div class="card-bottom">
-                                <input type="" class="text" name="name" placeholder="Enter the guide name : " size="50" required>
+                                <input type="" class="text" name="name" placeholder="Enter the guide name : " size="50"
+                                    required>
                                 <div class="card-bottom">
                                     <input type="number" class="email" name="no"
                                         placeholder="Enter guide's mobile number : " size="50" required>
@@ -285,7 +261,37 @@
                         </form>
 
             </section>
+
         </div>
+
+        <table style="border-collapse: collapse;
+            width: 80%;
+            margin: 200px auto;
+            padding: 100px;
+          ">
+            <tr>
+                <th style="border: 1px solid #000;
+                    padding: 8px;
+                    text-align: left;background-color:#f2f2f2;
+
+                  ">Women Helpline Numbers</th>
+                <td style="border: 1px solid #000;
+                    padding: 8px;
+                    text-align: left;
+                  ">181, 1091</td>
+            </tr>
+            <tr>
+                <th style="border: 1px solid #000;
+                    padding: 8px;
+                    text-align: left;background-color:#f2f2f2;
+                  ">Children Helpline Numbers</th>
+                <td style="border: 1px solid #000;
+                    padding: 8px;
+                    text-align: left;
+                  ">1098</td>
+            </tr>
+        </table>
+
         <!--===========About Us===============-->
         <section class="about">
             <div class="about-img">
@@ -372,7 +378,7 @@
                 <div class="container1">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-sm-7">
-                            <p class="mb-0 f_400">©WayFar~2023 All rights reserved.</p>
+                            <p class="mb-0 f_400">©WayFar~2024 All rights reserved.</p>
                         </div>
                         <div class="col-lg-6 col-sm-5 text-right">
                             <p>Made with <i class="icon_heart"></i> in <a id="at" href="http://cakecounter.com"
