--- a/views/registered.ejs
+++ b/views/registered.ejs
@@ -89,13 +89,16 @@
 </head>
 
 <body>
-    <p>Your details are under verification.
-        Thankyou</p>
     <div class="wrapper"> <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
             <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
             <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
+
         </svg>
+
     </div>
+
+    <p style="text-align: center;">Your details are under verification.Thankyou</p>
+
     </div>
     <script src="index.js"></script>
 </body>
