--- a/views/singup.ejs
+++ b/views/singup.ejs
@@ -10,7 +10,7 @@
 </head>
 <body style="backdrop-filter: 2px;">
     <div class="header">
-        <div class="logo"><img src="/public/images/Logo.png" height="100px" width="100px"></div>
+        <div class="logo"><img src="/public/images/Logo.png" height="80px" width="80px"></div>
         <div class="menu">
             <svg class="line-top" width="750" height="0px" viewbox="0,0 1000,20">
             <line
@@ -26,12 +26,12 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/login">Log in</a></li></ul>
             <br>
-            <svg class="line-bottom" width="750" height="30" viewbox="0,0 1000,40">
+            <!-- <svg class="line-bottom" width="750" height="30" viewbox="0,0 1000,40">
             <polygon class="lb" points="35,53 115,53 125,43 135,53 215,53" />
             <polygon class="lb" points="285,53 365,53 375,43 385,53 465,53" />
             <polygon class="lb" points="535,53 615,53 625,43 635,53 715,53" />
             <polygon class="lb" points="785,53 865,53 875,43 885,53 965,53" />
-            </svg>
+            </svg> -->
         </div>
     </div>
     <div id="pSlider">
